[gd_scene load_steps=21 format=2]

[ext_resource path="res://VeinNet.tscn" type="PackedScene" id=1]
[ext_resource path="res://Organ.tscn" type="PackedScene" id=2]
[ext_resource path="res://VeinController.gd" type="Script" id=3]
[ext_resource path="res://assets/animations/Intestines.tres" type="SpriteFrames" id=4]
[ext_resource path="res://PauseMenu.tscn" type="PackedScene" id=5]
[ext_resource path="res://Main.gd" type="Script" id=6]
[ext_resource path="res://Organs.gd" type="Script" id=7]
[ext_resource path="res://assets/background.png" type="Texture" id=8]
[ext_resource path="res://assets/animations/Lungs.tres" type="SpriteFrames" id=9]
[ext_resource path="res://assets/brain.png" type="Texture" id=10]
[ext_resource path="res://GameOverMenu.tscn" type="PackedScene" id=11]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 0, 0, 256, 180 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 256, 0, 256, 180 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 512, 0, 256, 180 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 768, 0, 256, 180 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 1024, 0, 256, 180 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 1280, 0, 256, 180 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 1536, 0, 256, 180 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 1792, 0, 256, 180 )

[sub_resource type="SpriteFrames" id=9]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ) ],
"loop": true,
"name": "default",
"speed": 10.0
} ]

[node name="Main" type="Node2D"]
script = ExtResource( 6 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 8 )
centered = false

[node name="VeinController" type="Node2D" parent="."]
script = ExtResource( 3 )

[node name="Red" parent="VeinController" instance=ExtResource( 1 )]
color = Color( 0.654902, 0, 0, 1 )

[node name="Blue" parent="VeinController" instance=ExtResource( 1 )]
net_number = 1
color = Color( 0, 0, 0.505882, 1 )

[node name="Organs" type="Node2D" parent="."]
script = ExtResource( 7 )

[node name="Heart" parent="Organs" instance=ExtResource( 2 )]
position = Vector2( 199.64, 887.596 )
points = PoolVector2Array( -43.7522, -148.314, -106.049, -139.334 )

[node name="intestines" parent="Organs" instance=ExtResource( 2 )]
position = Vector2( 265.671, 198.751 )
points = PoolVector2Array( -92.6416, 108.171, 98.0617, -111.137 )

[node name="Organ" parent="Organs/intestines" index="0"]
frames = ExtResource( 4 )
animation = "default"
frame = 2

[node name="HealthBar" parent="Organs/intestines" index="1"]
margin_left = -8.5694
margin_top = 58.0474
margin_right = 61.4306
margin_bottom = 68.0474

[node name="Lungs" parent="Organs" instance=ExtResource( 2 )]
position = Vector2( 1013.4, 530.423 )
points = PoolVector2Array( 4.14343, 69.3401, -36.8566, -89.6599 )

[node name="Organ" parent="Organs/Lungs" index="0"]
frames = ExtResource( 9 )
animation = "default"

[node name="HealthBar" parent="Organs/Lungs" index="1"]
margin_left = 22.895
margin_top = -84.2918
margin_right = 92.895
margin_bottom = -74.2918

[node name="Brain" parent="Organs" instance=ExtResource( 2 )]
position = Vector2( 1739.13, 339.866 )
points = PoolVector2Array( -115.971, 50.6059, -43.5291, 75.1467 )

[node name="Organ" parent="Organs/Brain" index="0"]
frames = SubResource( 9 )
animation = "default"

[node name="HealthBar" parent="Organs/Brain" index="1"]
margin_left = -106.022
margin_top = -114.012
margin_right = -36.0217
margin_bottom = -104.012

[node name="Score" type="Label" parent="."]
anchor_right = 1.0
margin_bottom = 14.0
rect_min_size = Vector2( 1920, 0 )
text = "0"
align = 1
valign = 1
max_lines_visible = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CanvasLayer" type="CanvasLayer" parent="."]
pause_mode = 2

[node name="PauseMenu" parent="CanvasLayer" instance=ExtResource( 5 )]
visible = false

[node name="GameOverMenu" parent="CanvasLayer" instance=ExtResource( 11 )]
visible = false
[connection signal="all_organs_died" from="Organs" to="." method="_on_Organs_all_organs_died"]
[connection signal="heart_died" from="Organs" to="." method="_on_Organs_heart_died"]

[editable path="Organs/intestines"]

[editable path="Organs/Lungs"]

[editable path="Organs/Brain"]
